# qwen_math_grpo

./: .gitignore  README.md  pyproject.toml
cs336_alignment/: __init__.py  evaluate_math.py  grpo.py  utils.py
notebooks/: grpo_training_colab.ipynb
scripts/: download_dataset.py  download_model.py  plot_training.py  run_grpo.py  run_math_eval.py
