[project]
name = "qwen-math-grpo"
version = "0.1.0"
description = "GRPO training for Qwen2.5-Math-1.5B on MATH dataset"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.50.0",
    "accelerate>=0.26.0",
    "datasets>=3.0.0",
    "huggingface_hub>=0.20.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
    # Math evaluation
    "math-verify[antlr4-13-2]>=0.7.0",
    "pylatexenc==2.10",
    "sympy",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.8.4",
]
cuda = [
    "flash-attn==2.7.4.post1",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cs336_alignment"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
